Added ERD photo links

--- a/IY455_Stage_1_P501367.md
+++ b/IY455_Stage_1_P501367.md
@@ -55,10 +55,11 @@ steps to inserting the data.
 
 # ERD
 
-![](C:\Users\User\Downloads\455.jpg)
+[![](ERD)](https://github.com/T0501367-Dalaijargal/IY455_P501367_Coursework/blob/main/455.jpg)
 
 # References
 
 Fong, J.S.P., Wong Ting Yan, K. (2021). Information Systems
 Reengineering, Integration and Normalization. Springer, Cham. [Data Normalization | Springer Nature Link](https://doi.org/10.1007/978-3-030-79584-9_8) [Accessed on 19th
 February, 2026].
+
